# tutorial_gazebo-simple-model

./: CMakeLists.txt  README.md
gazebo/models/simple_object/: model.config  simple_object.sdf
gazebo/worlds/: simple_object_world.sdf
